updated about page

--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -10,6 +10,10 @@
 <body>
     <div class="main-content">
         {{>header}}
+        <p>
+            This application was created by Chron Bot using the <br>
+            Weatherstack API, Nodes.js, Express, and Handlebars.
+        </p>
         <img class="portrait" src="/img/robot.png">
     </div>
     {{>footer}}
